Add task skill create API
